<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calci</string>
    <string name="hello_world">Udit Jain\'s first app</string>
    <string name="action_settings">Settings</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Dot">.</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Devide">/</string>
    <string name="Multiply">*</string>
    <string name="Clear">Clr</string>
    <string name="Delete">DEL</string>
    <string name="Equals">=</string>
    <string name="BasicCalculator">Basic Calculator</string>
    <string name="EMICalculator">EMI Calculator</string>
    <string name="UnderDevelopment">\n This feature is under development. Sorry for the inconvenience caused. \n\n Regards, \n Udit</string>
    <string name="Home">Home</string>
    <string name="amount_hint">Loan amount</string>
    <string name="rate">Interest rate (per annum)</string>
    <string name="tenure">Tenure</string>
    <string name="calculate">Calculate</string>
    <string name="resultString">EMI Calculation</string>
    <string name="emiAmount">EMI Amount:</string>
    <string name="totalInterest">Total interest payable :</string>
    <string name="totalAmount">Total Amount payable :</string>
    <string name="shareResults">Share</string>
    <string name="loanAmount">Loan Amount</string>
    <string name="reset">Reset</string>


    <string-array name="difficulty_level">
        <item>Easy</item>
        <item>Medium</item>
        <item>Difficult</item>

    </string-array>


</resources>
