<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CalculatorActivity"
    android:weightSum="1"
    >

    <TextView
        android:id="@+id/screen"
        android:background="@drawable/back"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="90dp"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"


        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:paddingLeft="20dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="25dp"
        tools:context=".CalculatorActivity"
        android:weightSum="1">
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/Clear"
            android:onClick="clearScreen" />


            />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/Devide"
            android:onClick="operatorPressed"

            />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/Multiply"
            android:onClick="operatorPressed"
            />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:text="@string/Delete"
            android:onClick="backspace"

            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="205dp"
        android:layout_height="300dp"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="25dp"
        tools:context=".CalculatorActivity"
        android:weightSum="1">



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="-10dp"
            android:orientation="horizontal"
            tools:context=".CalculatorActivity">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/Seven"
                android:onClick="numberPressed"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/Eight"
                android:onClick="numberPressed"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/Nine"
                android:onClick="numberPressed"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="225dp"
            android:layout_height="70dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingTop="-10dp"
            android:paddingBottom="0dp"
            android:orientation="horizontal"
            tools:context=".CalculatorActivity">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/Four"
                android:onClick="numberPressed"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/Five"
                android:onClick="numberPressed"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/Six"
                android:onClick="numberPressed"/>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="-10dp"
            android:orientation="horizontal"
            tools:context=".CalculatorActivity">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/One"
                android:onClick="numberPressed"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/Two"
                android:onClick="numberPressed"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/Three"
                android:onClick="numberPressed"/>

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="-10dp"
            android:orientation="horizontal"
            tools:context=".CalculatorActivity"
            android:weightSum="1"
            android:layout_weight="0.19"
            >

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/Zero"
                android:layout_weight="0.01"
                android:onClick="numberPressed"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/Dot"
                android:onClick="decimalPressed"/>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="80dp"
        android:layout_height="300dp"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="230dp"
        tools:context=".CalculatorActivity"
        android:weightSum="1">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/Plus"
            android:onClick="operatorPressed"
            android:layout_weight="0.01"
            />
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/Minus"
            android:onClick="operatorPressed"
            android:layout_weight="0.01"
            />
        <Button
            android:layout_width="60dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:text="@string/Equals"

            android:background="#00ffff"
            android:layout_weight="0.01"
            android:onClick="equalsCalculate"
            />
    </LinearLayout>

</RelativeLayout>
