<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_calculator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/calculator_background"
    android:orientation="vertical"
    android:weightSum="5">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right|bottom"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/back"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="12dp"
        android:weightSum="5"
        android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="4"
        tools:context=".CalculatorActivity">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"

            android:textColor="#ff1af7e2"
            android:layout_weight="1"
            android:background="@drawable/calculator_button_special"
            android:onClick="clearScreen"
            android:text="@string/Clear" />


        />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"

            android:layout_weight="1"
            android:textColor="#ff1af7e2"
            android:background="@drawable/calculator_button_special"
            android:onClick="operatorPressed"
            android:text="@string/Devide" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"

            android:layout_weight="1"
            android:textColor="#ff1af7e2"
            android:background="@drawable/calculator_button_special"
            android:onClick="operatorPressed"
            android:text="@string/Multiply" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="0dp"

            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:textColor="#ff1af7e2"
            android:background="@drawable/calculator_button_special"
            android:onClick="backspace"
            android:text="@string/Delete" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="4"
        tools:context=".CalculatorActivity">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/calculator_button"
            android:onClick="numberPressed"
            android:text="@string/Seven" />
        />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/calculator_button"
            android:onClick="numberPressed"
            android:text="@string/Eight" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/calculator_button"
            android:onClick="numberPressed"
            android:text="@string/Nine" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"

            android:textColor="#ff1af7e2"
            android:background="@drawable/calculator_button_special"
            android:onClick="operatorPressed"
            android:text="@string/Plus" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="4"
        tools:context=".CalculatorActivity">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/calculator_button"
            android:onClick="numberPressed"
            android:text="@string/Six" />


        />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/calculator_button"
            android:onClick="numberPressed"
            android:text="@string/Five" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/calculator_button"
            android:onClick="numberPressed"
            android:text="@string/Four" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="4dp"

            android:layout_weight="1"
            android:textColor="#ff1af7e2"
            android:background="@drawable/calculator_button_special"
            android:onClick="operatorPressed"
            android:text="@string/Minus" />

    </LinearLayout>

    <!--complex-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:weightSum="31"
        tools:context=".CalculatorActivity"

        >
        <!--vertical 1-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="24"
            android:weightSum="2"
            android:orientation="vertical"
            tools:context=".CalculatorActivity">

            <!--horizontol inside 1-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                android:weightSum="3"
                android:orientation="horizontal"
                tools:context=".CalculatorActivity">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginBottom="4dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@drawable/calculator_button"
                    android:onClick="numberPressed"
                    android:text="@string/One" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginBottom="4dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@drawable/calculator_button"
                    android:onClick="numberPressed"
                    android:text="@string/Two" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="4dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@drawable/calculator_button"
                    android:onClick="numberPressed"
                    android:text="@string/Three" />

            </LinearLayout>

            <!--horizontol inside 2-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="28"
                tools:context=".CalculatorActivity">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginBottom="4dp"
                    android:textStyle="bold"
                    android:layout_weight="19"
                    android:background="@drawable/calculator_button"
                    android:onClick="numberPressed"
                    android:text="@string/Zero" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="4dp"
                    android:textStyle="bold"
                    android:layout_weight="9"
                    android:background="@drawable/calculator_button"
                    android:onClick="decimalPressed"
                    android:text="@string/Dot" />


            </LinearLayout>


            <!--equal button-->

        </LinearLayout>


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:layout_weight="7"
            android:background="@drawable/calculator_button_equal"
            android:onClick="equalsCalculate"
            android:text="@string/Equals" />

    </LinearLayout>
    </LinearLayout>

</LinearLayout>