<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emi_background"
    android:orientation="vertical"
    android:weightSum="11">

    <LinearLayout
        android:id="@+id/emiInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/emiInputLayout_topMargin"
        android:layout_weight="5"
        android:background="@drawable/emi_background_topview"
        android:orientation="vertical"
        android:weightSum="9">

        <EditText
            android:id="@+id/amount"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/amount_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/rateOfInterest"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/rate"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="15">

            <EditText
                android:id="@+id/tenure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:hint="@string/tenure"
                android:inputType="number" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_group_tenure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:orientation="horizontal"
                android:paddingTop="20dp">


                <RadioButton
                    android:id="@+id/tenure_months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onTenureRadioButtonClicked"
                    android:text="Months" />

                <RadioButton
                    android:id="@+id/tenure_years"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onTenureRadioButtonClicked"
                    android:text="Years" />
            </RadioGroup>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="15dp"
                android:layout_toLeftOf="@+id/centerPoint"
                android:background="@drawable/calculate"
                android:onClick="calculateEMIAmount"
                android:text="@string/calculate"
                android:textSize="@dimen/buttonText_height" />

            <TextView
                android:id="@+id/centerPoint"
                android:layout_width="7dip"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/centerPoint"
                android:background="@drawable/calculate"
                android:onClick="resetFields"
                android:text="@string/reset"
                android:textSize="@dimen/buttonText_height" />
        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/resultString"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-5dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/resultString"
        android:textColor="#ff9d9d9d"
        android:textStyle="bold"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="-30dp"
        android:layout_weight="5"
        android:background="@drawable/emi_background_topview"
        android:orientation="vertical"
        android:visibility="invisible"
        android:weightSum="14">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/emiAmountKey"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:hint="Monthly  Installment :"
                android:textStyle="bold"
                 />

            <TextView
                android:id="@+id/emiAmountValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="#ff737373"
                android:layout_toRightOf="@id/emiAmountKey" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/totalInterestPayableKey"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_weight="3"
                android:hint="Total Interest payable :"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/totalInterestPayableValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:textStyle="bold"
                android:textColor="#ff737373"
                android:layout_toRightOf="@id/totalInterestPayableKey" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/totalAmountPayableKey"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_weight="3"
                android:hint="Total Amount payable :"
                android:textStyle="bold"
                 />

            <TextView
                android:id="@+id/totalAmountPayableValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:textStyle="bold"
                android:textColor="#ff737373"
                android:layout_toRightOf="@id/totalAmountPayableKey" />

        </RelativeLayout>

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:background="@drawable/calculate"
            android:onClick="shareResults"
            android:text="@string/shareResults"
            android:textSize="@dimen/buttonText_height" />

    </LinearLayout>


</LinearLayout>